--- a/templates/default/v/dianying.html
+++ b/templates/default/v/dianying.html
@@ -10,7 +10,7 @@
 			<h1 class="page-title">电影</h1>
 			<div class="list-header scroll-box">
 				<div class="block-box-items scroll-content">
-					{{ range .DianYingData.listMacType }}
+					{{ range .PageData.listMacType }}
 					<div class="block-box-item ">
 						<a class="block-box-content" href="/v/{{.TypeEn}}.html" title="{{.TypeName}}"> <strong class="title">{{.TypeName}}</strong> </a>
 						<div class="block-box-bg">
@@ -36,7 +36,7 @@
 			</div>
 			<div class="module-list module-lines-list">
 				<div class="module-items">
-					{{ range .DianYingData.CurrentlyTrending }}
+					{{ range .PageData.CurrentlyTrending }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -91,7 +91,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listDongZuoPian }}
+					{{ range .PageData.listDongZuoPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -145,7 +145,7 @@
 				<a class="more" href="/v/xiju.html" title="更多">更多喜剧片<i class="icon-arrow-right-o"></i></a></div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listXiJuPian }}
+					{{ range .PageData.listXiJuPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -200,7 +200,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listAiQingPian }}
+					{{ range .PageData.listAiQingPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -255,7 +255,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listKeHuanPian }}
+					{{ range .PageData.listKeHuanPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -311,7 +311,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listKongBuPian }}
+					{{ range .PageData.listKongBuPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -366,7 +366,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listJuQingPian }}
+					{{ range .PageData.listJuQingPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -420,7 +420,7 @@
 				<a class="more" href="/v/war.html" title="更多">更多战争片<i class="icon-arrow-right-o"></i></a></div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listZhanZhengPian }}
+					{{ range .PageData.listZhanZhengPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -476,7 +476,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listDongHuaPian }}
+					{{ range .PageData.listDongHuaPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -531,7 +531,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listQiHuanPian }}
+					{{ range .PageData.listQiHuanPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
@@ -586,7 +586,7 @@
 			</div>
 			<div class="module-list module-line-list">
 				<div class="module-items">
-					{{ range .DianYingData.listJiLuPian }}
+					{{ range .PageData.listJiLuPian }}
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
