--- a/templates/default/v/dongman.html
+++ b/templates/default/v/dongman.html
@@ -40,7 +40,7 @@
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
-								<a href="show.html" title="{{ .VodName }}">
+								<a href="show-{{ EncryptID .VodId }}.html" title="{{ .VodName }}">
 									<i class="icon-play"></i>
 								</a>
 								<img alt="{{ .VodName }}"
@@ -57,7 +57,7 @@
 							</div>
 							<div class="module-item-content">
 								<div class="module-item-style video-name">
-									<a href="show.html" title="{{ .VodName }}">{{ .VodName }}</a>
+									<a href="show-{{ EncryptID .VodId }}.html" title="{{ .VodName }}">{{ .VodName }}</a>
 								</div>
 								<div class="module-item-style video-tag">
 									{{ $VodActorList := split .VodActor "," }}
@@ -71,7 +71,7 @@
 							</div>
 						</div>
 						<div class="module-item-titlebox">
-							<a class="module-item-title" href="show.html" title="{{ .VodName }}">{{ .VodName }}</a>
+							<a class="module-item-title" href="show-{{ EncryptID .VodId }}.html" title="{{ .VodName }}">{{ .VodName }}</a>
 						</div>
 						<div class="module-item-text">{{ .VodRemarks }}</div>
 					</div>
@@ -97,7 +97,7 @@
 					<div class="module-item">
 						<div class="module-item-cover">
 							<div class="module-item-pic">
-								<a href="show.html" title="{{ $data.VodName }}">
+								<a href="show-{{ $data.VodId }}.html" title="{{ $data.VodName }}">
 									<i class="icon-play"></i>
 								</a>
 								<img alt="{{ $data.VodName }}"
@@ -114,7 +114,7 @@
 							</div>
 							<div class="module-item-content">
 								<div class="module-item-style video-name">
-									<a href="show.html" title="{{ $data.VodName }}">{{ $data.VodName }}</a>
+									<a href="show-{{ $data.VodId }}.html" title="{{ $data.VodName }}">{{ $data.VodName }}</a>
 								</div>
 								<div class="module-item-style video-tag">
 									{{ $VodActorList := split $data.VodActor "," }}
@@ -128,7 +128,7 @@
 							</div>
 						</div>
 						<div class="module-item-titlebox">
-							<a class="module-item-title" href="show.html" title="{{ $data.VodName }}">{{ $data.VodName }}</a>
+							<a class="module-item-title" href="show-{{ $data.VodId }}.html" title="{{ $data.VodName }}">{{ $data.VodName }}</a>
 						</div>
 						<div class="module-item-text">{{ $data.VodRemarks }}</div>
 					</div>
